--- a/source/sass/blocks/_checkbox.scss
+++ b/source/sass/blocks/_checkbox.scss
@@ -14,58 +14,58 @@
   }
 }
 
-.checkbox__input:checked + .checkbox__svg {
-  display: block;
-}
-
-.checkbox__svg {
+.checkbox__input + .checkbox__label::before {
+  content: " ";
   position: absolute;
-  top: 3px;
-  left: 7px;
+  left: 0;
+  top: -5px;
+  width: 30px;
+  height: 30px;
 
-  display: none;
-  margin: 0;
-  width: 18px;
-  height: 14px;
+  border: 1px solid $border;
 
   @media (min-width: $tablet) {
-    top: 2px;
-    left: 8px;
-
-    width: 26px;
-    height: 26px;
+    width: 40px;
+    height: 40px;
   }
 }
 
-.checkbox__label {
-  &::before {
-    content: " ";
-    position: absolute;
-    left: 0;
-    top: -5px;
-    width: 30px;
-    height: 30px;
-
-    border: 1px solid $border;
-
-    @media (min-width: $tablet) {
-      width: 40px;
-      height: 40px;
-    }
-  }
-}
-
-.checkbox__label:hover::before {
+.checkbox__input:hover + .checkbox__label::before {
   border-color: $border-strong;
 }
 
-.checkbox__label--disabled {
+.checkbox__input:checked + .checkbox__label::after {
+  position: absolute;
+  left: 3px;
+
+  width: 26px;
+  height: 26px;
+
+  background-image: url("../img/tick.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  content: " ";
+
+  transform-origin: 0% 100%;
+  animation-name: tick;
+  animation-duration: 0.3s;
+  animation-fill-mode: both;
+
+  @media (min-width: $tablet) {
+    left: 7px;
+  }
+}
+
+.checkbox__input:disabled + .checkbox__label {
   opacity: 0.3;
 }
 
-.checkbox__line {
-  fill: $basic-green;
-  stroke: $basic-green;
-  stroke-width: 1;
-  stroke-dasharray: 0, 154;
+@keyframes tick {
+  0% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(2px);
+  }
 }
