--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -155,7 +155,7 @@
     &::before {
       position: absolute;
       top: 20px;
-      right: 5px;
+      right: 0;
 
       display: block;
       width: 100%;
@@ -226,7 +226,7 @@
   }
 
   @media (min-width: $desktop) {
-    margin-bottom: 20px;
+    margin-bottom: 22px;
   }
 }
 
