--- a/source/sass/blocks/_form-control.scss
+++ b/source/sass/blocks/_form-control.scss
@@ -3,16 +3,18 @@
 
   display: grid;
   grid-template-columns: auto 1fr;
-  align-items: baseline;
+  align-items: center;
   width: 100%;
 }
 
 .form-control__label {
   margin-right: 13px;
+  margin-bottom: 4px;
 }
 
 .form-control__field {
-  padding: 13px 40px 13px 16px;
+  //height: 52px;
+  padding: 9px 40px 11px 16px;
 
   font-size: 16px;
   line-height: 18px;
@@ -20,7 +22,8 @@
   text-transform: uppercase;
   color: $text-main;
 
-  border: 1px solid $special-grey;
+  border: 2px solid transparent;
+  box-shadow: 0 0 0 1px $special-grey;
   outline: none;
 
   -moz-appearance: textfield;
@@ -36,10 +39,12 @@
 
   &:hover {
     border-color: $border;
+    box-shadow: none;
   }
 
   &:focus {
     border: 2px solid $text-main;
+    box-shadow: none;
   }
 
   &--error {
@@ -55,7 +60,7 @@
   }
 
   @media (min-width: $tablet) {
-    padding: 10px 40px 11px 18px;
+    padding: 9px 40px 10px 18px;
 
     font-size: 20px;
     line-height: 30px;
@@ -74,11 +79,12 @@
 
 .form-control__svg {
   position: absolute;
-  top: 36%;
-  right: 3%;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
 
-  width: 18px;
-  height: 13px;
+  width: 19px;
+  height: 14px;
 
   background-color: $card-title;
   mask-image: url("../img/icon-email.svg");
