Htnbybpfwbz ретинизация и адаптивная графика

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -20,6 +20,7 @@ $special-lightgrey: #d9d9d9;
 $basic-lightgrey: #dcdcdc;
 $beige: #eaeaea;
 $green: #63a63c;
+$green085: rgba(104, 183, 56, 0.85);
 $special-green: #5eaa2f;
 $basic-green: #68b738;
 
@@ -41,6 +42,7 @@ $border: $lightgrey;
 $border-strong: $lightgrey-strong;
 $form-field: $special-grey;
 $back-green: $green;
+$back-green085: $green085;
 $cards-border: $pinkgrey;
 $card-title: $darkgrey;
 $special-btn: $basic-grey;
