--- a/source/sass/blocks/_add-good.scss
+++ b/source/sass/blocks/_add-good.scss
@@ -8,7 +8,7 @@
 
   @media (min-width: $desktop) {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: auto auto 1fr;
     gap: 38px;
     align-items: flex-start;
     padding: 15px 0 17px;
