--- a/source/sass/blocks/_card.scss
+++ b/source/sass/blocks/_card.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  height: 100%;
   padding-top: 20px;
   padding-bottom: 25px;
 
