--- a/source/sass/blocks/_form-control.scss
+++ b/source/sass/blocks/_form-control.scss
@@ -13,7 +13,6 @@
 }
 
 .form-control__field {
-  //height: 52px;
   padding: 9px 40px 11px 16px;
 
   font-size: 16px;
@@ -22,15 +21,14 @@
   text-transform: uppercase;
   color: $text-main;
 
-  border: 2px solid transparent;
-  box-shadow: 0 0 0 1px $special-grey;
+  border: 1px solid $special-grey;
   outline: none;
 
   -moz-appearance: textfield;
 
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+    appearance: none;
   }
 
   &::placeholder {
@@ -39,16 +37,16 @@
 
   &:hover {
     border-color: $border;
-    box-shadow: none;
   }
 
   &:focus {
-    border: 2px solid $text-main;
-    box-shadow: none;
+    border-color: $text-main;
+    box-shadow: 0 0 0 1px $text-main;
   }
 
   &--error {
-    border: 2px solid $error;
+    border-color: $error;
+    box-shadow: 0 0 0 1px $text-main;
   }
 
   &--text {
