--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -10,12 +10,13 @@
 
   &--container {
     @media (min-width: $tablet) {
+      width: 100%;
       padding-left: 30px;
       padding-right: 30px;
     }
 
     @media (min-width: $desktop) {
-      max-width: 1440px;
+      max-width: 1280px;
       margin: 0 auto;
     }
   }
@@ -55,14 +56,6 @@
 .page-header__logo {
   display: flex;
   margin-right: auto;
-
-  @media (min-width: $desktop) {
-    margin-right: 540px;
-
-    &--form {
-      margin-right: 536px;
-    }
-  }
 }
 
 .page-header__button {
