--- a/source/sass/blocks/_card.scss
+++ b/source/sass/blocks/_card.scss
@@ -79,7 +79,7 @@
   @media (min-width: $desktop) {
     &--show-more {
       .card__title {
-        margin: 167px 16px 26px;
+        margin: 160px 16px 23px;
         line-height: 25px;
       }
     }
@@ -118,11 +118,11 @@
   order: -1;
 
   @media (min-width: $tablet) {
-    margin-bottom: 28px;
+    margin-bottom: 34px;
   }
 
   @media (min-width: $desktop) {
-    margin-bottom: 46px;
+    margin-bottom: 42px;
   }
 }
 
@@ -130,18 +130,17 @@
   display: block;
   order: -1;
 
-  &--tablet {
-    display: none;
+  @media (min-width: $tablet) {
+    margin-top: -73px;
+    width: 168px;
+    height: 200px;
+
+    order: -1;
   }
 
-  @media (min-width: $tablet) {
-    display: none;
-
-    &--tablet {
-      display: block;
-      margin-top: -73px;
-      order: -1;
-    }
+  @media (min-width: $desktop) {
+    width: 172px;
+    height: 196px;
   }
 }
 
@@ -205,10 +204,6 @@
       padding-top: 0;
     }
   }
-  //
-  //@media (min-width: $desktop) {
-  //  width: 166px;
-  //}
 }
 
 .card__value {
