--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -12,7 +12,20 @@
   @media (min-width: $desktop) {
     padding-bottom: 75px;
 
-    background: linear-gradient(to top, $back, $back 492px, transparent, transparent 492px);
+    background: linear-gradient(to top, $back, $back 455px, transparent, transparent 455px);
+  }
+}
+
+.example__container {
+  @media (min-width: $desktop) {
+    display: flex;
+  }
+}
+
+.example__box {
+  @media (min-width: $desktop) {
+    width: 440px;
+    margin-right: 50px;
   }
 }
 
@@ -45,6 +58,7 @@
     grid-row: 1/2;
     grid-column: 1/2;
 
+    margin-top: 58px;
     margin-bottom: 146px;
   }
 }
@@ -75,11 +89,10 @@
   display: flex;
   flex-wrap: wrap;
 
-  //margin: 0 0 297px 0;
-  margin: 0;
+  margin: 0 0 297px 0;
 
   @media (min-width: $tablet) {
-    margin-bottom: 55px;
+    margin-bottom: 608px;
   }
 
   @media (min-width: $desktop) {
@@ -244,7 +257,6 @@
 
 .example__slider {
   @media (min-width: $desktop) {
-    grid-row: 1/4;
-    grid-column: 2/3;
+    align-self: flex-end;
   }
 }
