--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -64,10 +64,14 @@
   }
 }
 
+.page-footer__map {
+  min-height: 362px;
+  background-color: $back;
+}
+
 .page-footer__map-image {
   display: flex;
   width: 100%;
-  height: 362px;
 }
 
 .page-footer__contacts {
