--- a/source/sass/blocks/_page.scss
+++ b/source/sass/blocks/_page.scss
@@ -14,4 +14,31 @@
   font-size: 18px;
   line-height: 24px;
   font-family: $arial;
+
+  @media (min-width: $desktop) {
+    &--index {
+      &::before {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 50vw;
+
+        z-index: -1;
+        content: "";
+
+        width: 50%;
+        height: 694px;
+        bottom: 75px;
+
+        background-image: linear-gradient($back-green085, $back-green085), url("../img/background-green-desktop.jpg");
+        background-repeat: no-repeat;
+        background-color: $back-green;
+
+        @media (min-resolution: 2dppx) {
+          background-image: linear-gradient($back-green085, $back-green085), url("../img/background-green-desktop@2x.jpg");
+          background-size: 1044px auto;
+        }
+      }
+    }
+  }
 }
