--- a/source/sass/blocks/_slider.scss
+++ b/source/sass/blocks/_slider.scss
@@ -1,25 +1,41 @@
 .slider__container {
   position: relative;
-  width: 100%;
+
+  width: 320px;
+
+  @media (min-width: $tablet) {
+    width: 768px;
+  }
 }
 
-//.slider__box {
-//  position: absolute;
-//  top: -300px;
-//  left: 20px;
-//
-//  width: 50%;
-//  overflow: hidden;
-//
-//  &--after {
-//    position: absolute;
-//    top: -310px;
-//    left: 65px;
-//
-//    width: 50%;
-//    overflow: hidden;
-//  }
-//}
+.slider__box {
+  position: absolute;
+  bottom: 60px;
+  left: calc(50vw - 160px);
+
+  width: 100%;
+  height: 232px;
+  overflow: hidden;
+
+  &--before {
+    z-index: 1;
+  }
+
+  @media (min-width: $tablet) {
+    bottom: -50px;
+    left: calc(50vw - 320px);
+
+    width: 44%;
+    height: 620px;
+  }
+
+  @media (min-width: $desktop) {
+    bottom: -85px;
+    left: calc(50vw - 690px);
+
+    width: 48%;
+  }
+}
 
 .slider__img {
   max-width: none;
@@ -36,11 +52,24 @@
   }
 
   &--after {
+    position: absolute;
+    bottom: 62px;
+    left: calc(50vw - 105px);
+
     display: none;
     width: 251px;
 
     @media (min-width: $tablet) {
+      bottom: 52px;
+      left: calc(50vw - 230px);
+
+      display: block;
       width: 545px;
+    }
+
+    @media (min-width: $desktop) {
+      bottom: 20px;
+      left: calc(50vw - 570px);
     }
   }
 }
