--- a/source/sass/_container.scss
+++ b/source/sass/_container.scss
@@ -30,7 +30,7 @@
     }
   }
 
-  &--reset-form {
+  &--reset-desktop {
     @media (min-width: $desktop) {
       width: auto;
       padding-left: 0;
