--- a/source/sass/blocks/_page.scss
+++ b/source/sass/blocks/_page.scss
@@ -21,7 +21,7 @@
         display: block;
         position: absolute;
         top: 0;
-        left: 50vw;
+        left: 50%;
 
         z-index: -1;
         content: "";
