--- a/source/sass/blocks/_socials.scss
+++ b/source/sass/blocks/_socials.scss
@@ -22,6 +22,10 @@
   &:last-child {
     margin-right: 0;
   }
+
+  @media (max-width: $tablet) {
+    margin-right: 35px;
+  }
 }
 
 .socials__link {
@@ -33,5 +37,16 @@
 
   &:active {
     color: $main;
+  }
+}
+
+@media (min-width: $desktop) {
+  .socials__svg {
+    width: 29px;
+    height: 22px;
+
+    &--facebook {
+      height: 27px;
+    }
   }
 }
