--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -200,6 +200,10 @@
 
   @media (min-width: $tablet) {
     margin-bottom: 0;
+    padding: 14px 45px;
+
+    font-size: 20px;
+    line-height: 0;
   }
 }
 
