--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -16,7 +16,7 @@
   }
 
   @media (min-width: $desktop) {
-    padding: 45px 51px 55px;
+    padding: 77px 51px 59px;
     margin-bottom: 0;
 
     &--pro {
@@ -29,7 +29,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin: 0 0 22px 0;
+  margin: 0 0 22px 71px;
 
   font-weight: 400;
   font-size: 24px;
@@ -39,24 +39,26 @@
   color: $text-dark;
 
   &::before {
+    position: absolute;
+    left: 20px;
+
     content: "";
     width: 50px;
     height: 53px;
-    margin-right: 19px;
 
     background-image: url("../img/offer-cat.svg");
+    background-repeat: no-repeat;
     background-size: contain;
   }
 
   &--pro {
-    margin-bottom: 41px;
+    margin-bottom: 29px;
 
     &::before {
+      left: 12px;
 
       width: 67px;
       height: 50px;
-      margin-right: 11px;
-      margin-left: -17px;
 
       background-image: url("../img/offer-cat-pro.svg");
     }
@@ -65,42 +67,48 @@
   @media (min-width: $tablet) {
     padding-left: 0;
     margin-bottom: 24px;
+    margin-left: 0;
 
     font-size: 36px;
     line-height: 36px;
 
     &::before {
-      display: none;
+      top: 65px;
+      right: 50px;
+      left: auto;
+
+      width: 200px;
+      height: 211px;
+    }
+
+    &--pro {
+      &::before {
+        right: 25px;
+
+        width: 268px;
+        height: 200px;
+      }
     }
   }
 
   @media (min-width: $desktop) {
     margin-bottom: 73px;
-
-    &--slim {
-      margin-bottom: 37px;
-    }
+    margin-left: 162px;
 
     &::before {
-      display: block;
-      content: "";
+      top: 45px;
+      left: 55px;
+
       width: 100px;
       height: 106px;
-      margin-right: 62px;
-
-      background-image: url("../img/offer-cat.svg");
-      background-size: contain;
     }
 
     &--pro {
-      margin-bottom: 41px;
-
       &::before {
+        left: 35px;
+
         width: 134px;
         height: 100px;
-        margin-right: 47px;
-
-        background-image: url("../img/offer-cat-pro.svg");
       }
     }
   }
@@ -126,27 +134,8 @@
 
     border-bottom: none;
 
-    &::after {
-      position: absolute;
-      content: "";
-      width: 200px;
-      height: 211px;
-      top: 85px;
-      right: 62px;
-
-      background-image: url("../img/offer-cat.svg");
-    }
-
     &--pro {
       max-width: calc(100% - 240px);
-
-      &::after {
-        width: 268px;
-        height: 200px;
-        right: 27px;
-
-        background-image: url("../img/offer-cat-pro.svg");
-      }
     }
   }
 
@@ -156,10 +145,6 @@
 
     &--slim {
       margin-bottom: 27px;
-    }
-
-    &::after {
-      display: none;
     }
   }
 }
