--- a/source/sass/blocks/_socials.scss
+++ b/source/sass/blocks/_socials.scss
@@ -5,13 +5,14 @@
   align-items: center;
   justify-content: center;
 
-  padding-top: 20px;
-  padding-bottom: 17px;
+  padding: 18px 0 14px;
 
   border-top: 1px solid $special-pink;
   border-bottom: 1px solid $special-pink;
 
   @media (min-width: $tablet) {
+    padding: 0;
+
     border: none;
   }
 }
@@ -24,7 +25,15 @@
   }
 
   @media (max-width: $tablet) {
-    margin-right: 35px;
+    margin-right: 23px;
+
+    &:nth-child(2) {
+      margin-right: 18px;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
@@ -40,7 +49,7 @@
   }
 }
 
-@media (min-width: $desktop) {
+@media (min-width: $tablet) {
   .socials__svg {
     width: 29px;
     height: 22px;
