--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -1,5 +1,6 @@
 .example {
-  padding: 27px 0 32px;
+  position: relative;
+  padding: 27px 0 35px;
 
   background-color: $dark-back;
 
@@ -12,7 +13,20 @@
   @media (min-width: $desktop) {
     padding-bottom: 70px;
 
-    background: linear-gradient(to top, $back, $back 460px, $transparent, $transparent 460px);
+    background: linear-gradient(to top, $back, $back 465px, $transparent, $transparent 465px);
+
+    &::before {
+      position: absolute;
+      right: 0;
+
+      width: calc(50vw - 328px);
+      height: 100%;
+
+      background: linear-gradient(to top, $dark-back, $dark-back 465px, transparent, transparent 465px);
+
+      content: " ";
+      z-index: -1;
+    }
   }
 }
 
@@ -31,8 +45,15 @@
   }
 }
 
+.example__box {
+  @media (min-width: $desktop) {
+    margin-right: 214px;
+  }
+}
+
 .example__title {
-  margin: 0 0 33px 0;
+  min-width: 280px;
+  margin: 0 0 35px 0;
 
   font-weight: 400;
   font-size: 36px;
@@ -74,6 +95,7 @@
     grid-row: 2/3;
     grid-column: 1/2;
 
+    width: 436px;
     margin-bottom: 69px;
   }
 }
@@ -85,7 +107,7 @@
   margin: 0 0 42px 0;
 
   @media (min-width: $tablet) {
-    margin-bottom: 59px;
+    margin-bottom: 86px;
   }
 
   @media (min-width: $desktop) {
@@ -103,8 +125,8 @@
   justify-content: center;
 
   width: 124px;
-  margin: 0 31px 34px 0;
-  padding: 14px 0 17px 0;
+  margin: 0 31px 32px 0;
+  padding: 15px 0 16px 0;
 
   border: 1px solid $border;
   border-radius: 3px;
@@ -134,6 +156,10 @@
     margin-right: 42px;
     margin-bottom: 0;
 
+    &--slim {
+      margin-left: 0;
+    }
+
     &--days {
       margin-right: auto;
     }
@@ -155,7 +181,7 @@
     &--cost {
       display: flex;
       flex-wrap: wrap;
-      margin-top: 61px;
+      margin-top: 57px;
       margin-bottom: 5px;
       margin-left: 0;
     }
@@ -169,7 +195,7 @@
 
   &--cost {
     padding-right: 5px;
-    padding-left: 15px;
+    //padding-left: 15px;
 
     color: $text-dark;
   }
