--- a/source/sass/blocks/_page-footer.scss
+++ b/source/sass/blocks/_page-footer.scss
@@ -75,7 +75,7 @@
 }
 
 .page-footer__map {
-  min-height: 362px;
+  height: 362px;
 
   background-image: url("../img/map.jpg");
   background-position: center;
@@ -88,7 +88,7 @@
   }
 
   @media (min-width: $tablet) {
-    min-height: 400px;
+    height: 400px;
 
     background-image: url("../img/map-tab.jpg");
 
@@ -109,6 +109,11 @@
 .page-footer__map-image {
   display: flex;
   width: 100%;
+  height: 362px;
+
+  @media (min-width: $tablet) {
+    height: 400px;
+  }
 }
 
 .page-footer__contacts {
@@ -126,14 +131,13 @@
     align-items: center;
 
     max-width: none;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-top: 55px;
+    padding-bottom: 55px;
   }
 
   @media (min-width: $desktop) {
     max-width: 1280px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 0 30px;
   }
 }
 
@@ -141,8 +145,8 @@
   display: flex;
   justify-content: center;
 
-  padding-top: 39px;
-  padding-bottom: 37px;
+  padding-top: 38px;
+  padding-bottom: 32px;
 
   &:hover {
     opacity: 0.8;
@@ -153,9 +157,10 @@
   }
 
   @media (min-width: $tablet) {
-    padding-top: 55px;
+    padding-top: 0;
+    padding-bottom: 0;
 
-    margin-right: auto;
+    margin-right: 156px;
   }
 
   @media (min-width: $desktop) {
@@ -185,6 +190,11 @@
   font-size: 16px;
   line-height: 18px;
   color: $text-main;
+
+  @media (min-width: $tablet) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
   &:hover {
     color: $main;
