--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 24px 0 64px;
+    padding: 24px 0 59px;
   }
 
   &--container {
@@ -37,7 +37,7 @@
 }
 
 .page-header__wrapper {
-  padding: 0 0 16px;
+  padding: 0 0 9px;
   border-bottom: 1px solid $special-pink;
 
   @media (min-width: $tablet) {
@@ -60,7 +60,9 @@
 }
 
 .page-header__button {
+  margin-right: 3px;
   padding: 0;
+
   border: none;
   background-color: transparent;
   cursor: pointer;
