--- a/source/sass/blocks/_primary-button.scss
+++ b/source/sass/blocks/_primary-button.scss
@@ -6,7 +6,7 @@
   gap: 0;
 
   width: 100%;
-  padding: 10px 35px;
+  padding: 11px 35px;
   font-size: 14px;
   line-height: 18px;
   font-family: $oswald;
@@ -22,5 +22,14 @@
 
   &:active {
     color: $text-promo03;
+  }
+
+  @media (min-width: $tablet) {
+    &--promo {
+      padding: 17px 26px;
+
+      font-size: 20px;
+      line-height: 20px;
+    }
   }
 }
