--- a/source/sass/blocks/_slider.scss
+++ b/source/sass/blocks/_slider.scss
@@ -13,21 +13,25 @@
 
   display: flex;
   justify-content: center;
+  width: 100%;
 
   @media (min-width: $tablet) {
-    width: 768px;
+    width: 708px;
+    margin-bottom: 14px;
   }
 
   @media (min-width: $desktop) {
-    width: 725px;
+    width: auto;
   }
 }
 
 .slider__box {
+  margin-bottom: 20px;
+
   &--before {
     position: absolute;
-    bottom: 2px;
-    left: 0;
+    bottom: 0;
+    left: -19px;
 
 
     width: 100%;
@@ -39,19 +43,19 @@
     background-color: $dark-back;
 
     @media (min-width: $tablet) {
-      bottom: -5px;
-      left: 60px;
+      bottom: 0;
+      left: 16px;
 
-      width: 45%;
+      width: 48%;
       height: 520px;
-      background-image: linear-gradient(to top, $dark-back, $dark-back $gradient-offset, $text-promo, $text-promo $gradient-offset);
+
+      background-image: linear-gradient(to top, $dark-back, $dark-back $gradient-offset-desk, $text-promo, $text-promo $gradient-offset-desk);
     }
 
     @media (min-width: $desktop) {
-      bottom: 10px;
-      left: 75px;
+      left: -80px;
 
-      width: 50%;
+      width: 64%;
 
       background-image: linear-gradient(to top, $back, $back $gradient-offset-desk, $text-promo, $text-promo $gradient-offset-desk);
     }
@@ -71,6 +75,10 @@
     width: 251px;
   }
 
+  &--before {
+    margin: 0 auto;
+  }
+
   @media (min-width: $tablet) {
     &--before {
       width: 677px;
@@ -79,7 +87,7 @@
 
     &--after {
       width: 545px;
-      margin-left: 80px;
+      margin-left: 50px;
     }
   }
 
@@ -89,9 +97,7 @@
     }
 
     &--after {
-      margin-left: 178px;
-      margin-right: 0;
-      margin-bottom: 15px;
+      margin: 0;
     }
   }
 }
@@ -102,11 +108,12 @@
   align-items: center;
   align-self: baseline;
 
-  margin-top: 24px;
-  margin-left: 20px;
+  margin-top: 26px;
+  margin-left: 5px;
 
   @media (min-width: $tablet) {
-    margin-top: 9px;
+    margin-top: 0;
+    margin-left: 0;
   }
 
   @media (min-width: $desktop) {
@@ -183,8 +190,8 @@
 
   @media (min-width: $tablet) {
     position: absolute;
-    top: -15px;
-    left: 50%;
+    top: -12px;
+    left: 46%;
 
     width: 8px;
     height: 8px;
@@ -214,6 +221,5 @@
 
   @media (min-width: $desktop) {
     top: -14px;
-    left: 45%;
   }
 }
