--- a/source/sass/blocks/_add-good.scss
+++ b/source/sass/blocks/_add-good.scss
@@ -1,22 +1,19 @@
 .add-good {
-  padding-top: 13px;
+  padding-top: 12px;
   padding-bottom: 19px;
 
   @media (min-width: $tablet) {
-    padding: 26px 38px 28px;
+    padding: 27px 38px 26px;
   }
 
   @media (min-width: $desktop) {
-    display: grid;
-    grid-template-columns: auto auto 1fr;
-    gap: 38px;
+    display: flex;
     align-items: flex-start;
-    padding: 15px 0 17px;
+    padding: 13px 0 16px;
   }
 }
 
 .add-good__title {
-  min-width: 288px;
   margin: 0 0 13px 0;
 
   font-weight: normal;
@@ -26,8 +23,8 @@
   color: $card-title;
 
   @media (min-width: $tablet) {
-    margin-right: 10px;
-    margin-bottom: 28px;
+    margin-right: auto;
+    margin-bottom: 27px;
 
     font-size: 20px;
     line-height: 20px;
@@ -44,7 +41,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  min-width: 288px;
   width: 100%;
   margin: 0 0 15px 0;
 
@@ -63,6 +59,7 @@
   }
 
   @media (min-width: $desktop) {
+    min-width: 288px;
     margin-top: 11px;
     margin-bottom: 7px;
   }
@@ -71,6 +68,10 @@
 .add-good__property {
   @media (min-width: $tablet) {
     margin-right: 49px;
+
+    &--water {
+      margin-right: 59px;
+    }
   }
 }
 
@@ -78,7 +79,21 @@
   margin: 0;
 }
 
+.add-good__wrapper {
+  display: flex;
+  align-items: baseline;
+
+  @media (min-width: $desktop) {
+    justify-content: space-between;
+    min-width: 613px;
+    margin-right: 38px;
+  }
+}
+
 .add-good__button {
+  padding-top: 10px;
+  padding-bottom: 10px;
+
   font-size: 16px;
   line-height: 20px;
 
