--- a/source/sass/blocks/_card.scss
+++ b/source/sass/blocks/_card.scss
@@ -80,7 +80,7 @@
     &--show-more {
       .card__title {
         margin: 160px 16px 23px;
-        line-height: 25px;
+        line-height: 22px;
       }
     }
   }
@@ -90,7 +90,7 @@
   position: relative;
 
   width: 76px;
-  margin: 0 0 18px 0;
+  margin: 0 0 13px 0;
 
   font-weight: normal;
   font-size: 16px;
@@ -104,8 +104,13 @@
 
     font-size: 20px;
     line-height: 24px;
-
     text-align: center;
+  }
+
+  @media (min-width: $desktop) {
+    line-height: 21px;
+
+    margin-bottom: 22px;
   }
 }
 
@@ -119,10 +124,14 @@
 
   @media (min-width: $tablet) {
     margin-bottom: 34px;
+
+    &--chicken-large {
+      margin-bottom: 28px;
+    }
   }
 
   @media (min-width: $desktop) {
-    margin-bottom: 42px;
+    margin-bottom: 47px;
   }
 }
 
@@ -136,9 +145,15 @@
     height: 200px;
 
     order: -1;
+
+    &--chicken-large {
+      height: 207px;
+    }
   }
 
   @media (min-width: $desktop) {
+    margin-top: -78px;
+
     width: 172px;
     height: 196px;
   }
@@ -153,7 +168,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    margin-bottom: 34px;
+    margin-bottom: 33px;
   }
 
   @media (min-width: $desktop) {
@@ -176,16 +191,22 @@
   }
 
   @media (min-width: $tablet) {
+    min-width: 247px;
+
     font-size: 16px;
     line-height: 16px;
 
     &--desc {
       width: 167px;
-      margin: 0 0 87px 0;
+      margin: 0 0 81px 0;
 
       line-height: 18px;
       text-align: center;
     }
+  }
+
+  @media (min-width: $desktop) {
+    min-width: 168px;
   }
 }
 
@@ -196,13 +217,17 @@
 
   @media (min-width: $tablet) {
     padding-top: 7px;
-    padding-bottom: 9px;
+    padding-bottom: 7px;
 
     border-bottom: 1px solid $border;
 
     &:first-child {
       padding-top: 0;
     }
+  }
+
+  @media (min-width: $desktop) {
+    margin-bottom: 2px;
   }
 }
 
@@ -212,6 +237,8 @@
 
 .card__button {
   margin-top: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   font-size: 16px;
   line-height: 20px;
