--- a/source/sass/blocks/_menu.scss
+++ b/source/sass/blocks/_menu.scss
@@ -18,6 +18,8 @@
   }
 
   @media (min-width: $desktop) {
+    margin-top: 0;
+
     font-size: 20px;
     line-height: 30px;
   }
@@ -57,11 +59,11 @@
     border: none;
 
     &:first-child {
-      padding-right: 35px;
+      padding-right: 33px;
     }
 
     &:nth-child(2) {
-      padding-right: 36px;
+      padding-right: 38px;
     }
 
     &:last-child {
@@ -76,8 +78,12 @@
     padding-right: 37px;
     border: none;
 
+    &:first-child {
+      padding-right: 37px;
+    }
+
     &:nth-child(2) {
-      padding-right: 32px;
+      padding-right: 34px;
     }
   }
 }
