Pixel Perfect страница формы

--- a/source/sass/blocks/_add-good.scss
+++ b/source/sass/blocks/_add-good.scss
@@ -80,8 +80,10 @@
 }
 
 .add-good__wrapper {
-  display: flex;
-  align-items: baseline;
+  @media (min-width: $tablet) {
+    display: flex;
+    align-items: baseline;
+  }
 
   @media (min-width: $desktop) {
     justify-content: space-between;
