--- a/source/sass/blocks/_form-control.scss
+++ b/source/sass/blocks/_form-control.scss
@@ -5,15 +5,33 @@
   grid-template-columns: auto 1fr;
   align-items: center;
   width: 100%;
+
+  &--owner {
+    @media (min-width: $desktop) {
+      margin-right: 71px;
+    }
+  }
 }
 
 .form-control__label {
   margin-right: 13px;
   margin-bottom: 4px;
+
+  &--weight {
+    margin-right: 16px;
+  }
+
+  @media (min-width: $tablet) {
+    margin-right: 16px;
+
+    &--weight {
+      margin-right: 19px;
+    }
+  }
 }
 
 .form-control__field {
-  padding: 9px 40px 11px 16px;
+  padding: 12px 10px 14px 15px;
 
   font-size: 16px;
   line-height: 18px;
@@ -58,7 +76,7 @@
   }
 
   @media (min-width: $tablet) {
-    padding: 9px 40px 10px 18px;
+    padding: 12px 40px 10px 19px;
 
     font-size: 20px;
     line-height: 30px;
@@ -66,9 +84,16 @@
     &--tel {
       padding-right: 17px;
     }
+
+    &--text {
+      height: 174px;
+    }
   }
 
   @media (min-width: $desktop) {
+    padding-top: 9px;
+    padding-right: 25px;
+
     &--text {
       height: 174px;
     }
@@ -79,7 +104,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: 20px;
+  right: 14px;
 
   width: 19px;
   height: 14px;
@@ -88,12 +113,18 @@
   mask-image: url("../img/icon-email.svg");
 
   &--tel {
-    right: 2%;
-
     width: 20px;
     height: 21px;
 
     mask-image: url("../img/icon-phone.svg");
+  }
+
+  @media (min-width: $desktop) {
+    right: 23px;
+
+    &--tel {
+      right: 17px;
+    }
   }
 }
 
