--- a/source/sass/blocks/_form.scss
+++ b/source/sass/blocks/_form.scss
@@ -13,7 +13,7 @@
   position: relative;
 
   margin: 0;
-  padding: 0 0 28px 0;
+  padding: 0 0 22px 0;
   border-top: none;
   border-right: none;
   border-left: none;
@@ -27,16 +27,18 @@
   &--owner {
     margin-top: 26px;
     padding-bottom: 23px;
+
+    border-bottom: none;
   }
 
   &--comment {
-    margin-top: 23px;
+    //margin-top: 23px;
     padding-bottom: 23px;
     border: none;
   }
 
   &--supplements {
-    margin-bottom: 37px;
+    margin-bottom: 40px;
     padding-bottom: 0;
     border: none;
   }
@@ -47,7 +49,7 @@
     &--program {
       padding-top: 0;
       padding-bottom: 0;
-      margin-top: 44px;
+      margin-top: 48px;
       margin-bottom: 71px;
     }
 
@@ -64,7 +66,7 @@
     }
 
     &--supplements {
-      margin-bottom: 34px;
+      margin-bottom: 60px;
     }
   }
 
@@ -84,7 +86,11 @@
     }
 
     &--comment {
-      margin-bottom: 76px;
+      margin-bottom: 67px;
+    }
+
+    &--supplements {
+      margin-bottom: 67px;
     }
   }
 }
@@ -94,6 +100,12 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @media (min-width: $tablet) {
+    &:nth-child(2) {
+      margin-bottom: 23px;
+    }
   }
 }
 
@@ -105,15 +117,50 @@
   text-transform: none;
   color: $text-dark;
 
+  &--line {
+    width: fit-content;
+    margin-left: -39px;
+    padding-right: 22px;
+    padding-left: 39px;
+
+    box-sizing: content-box;
+
+    background-color: white;
+
+    &::before {
+      position: absolute;
+      top: 15px;
+      right: 0;
+
+      display: block;
+      width: 100%;
+      height: 2px;
+      z-index: -1;
+
+      content: "";
+      background-color: $main;
+    }
+
+    @media (min-width: $tablet) {
+      padding-right: 42px;
+
+      &::before {
+        top: 22px;
+      }
+    }
+  }
+
   &--owner {
+    max-width: 181px;
     margin-bottom: 35px;
 
     @media (min-width: $tablet) {
+      max-width: none;
       margin-bottom: 76px;
     }
 
     @media (min-width: $desktop) {
-      margin-bottom: 70px;
+      margin-bottom: 76px;
     }
   }
 
@@ -127,10 +174,10 @@
   }
 
   &--supplements {
-    padding-bottom: 34px;
+    padding-bottom: 41px;
 
     @media (min-width: $tablet) {
-      margin-bottom: 57px;
+      margin-bottom: 60px;
       padding-bottom: 0;
     }
   }
@@ -141,38 +188,12 @@
   }
 }
 
-.form__text--line {
-  @media (min-width: $tablet) {
-    width: fit-content;
-    margin-left: -39px;
-    padding-right: 42px;
-    padding-left: 39px;
-
-    box-sizing: content-box;
-
-    background-color: white;
-
-    &::before {
-      position: absolute;
-      top: 20px;
-      right: 0;
-
-      display: block;
-      width: 100%;
-      height: 2px;
-      z-index: -1;
-
-      content: "";
-      background-color: $main;
-    }
-  }
-}
-
 .form__item-box {
   @media (min-width: $tablet) {
     display: grid;
     grid-template-columns: 50% 50%;
-    column-gap: 61px;
+    row-gap: 42px;
+    column-gap: 27px;
   }
 
   @media (min-width: $desktop) {
@@ -191,42 +212,57 @@
   }
 
   @media (min-width: $tablet) {
-    margin-bottom: 32px;
+    margin-bottom: 0;
   }
 }
 
 .form__btn {
   margin-bottom: 21px;
 
+  font-size: 16px;
+  line-height: 20px;
+
   @media (min-width: $tablet) {
+    margin-right: 62px;
     margin-bottom: 0;
-    padding: 14px 45px;
+    padding: 15px 45px 18px;
 
     font-size: 20px;
-    line-height: 0;
   }
 }
 
 .form__note {
+  margin: 0;
+
   text-align: center;
   font-size: 14px;
   line-height: 16px;
   font-family: $arial;
   text-transform: none;
 
+  @media (min-width: $tablet) {
+    margin-top: 16px;
+
+    font-size: 16px;
+    text-align: left;
+  }
+
   @media (min-width: $desktop) {
     width: calc(50% - 40px);
     margin-top: 14px;
     margin-bottom: 22px;
-    text-align: left;
   }
 }
 
 .form__group-item {
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @media (min-width: $tablet) {
+    margin-bottom: 19px;
   }
 
   @media (min-width: $desktop) {
@@ -260,6 +296,24 @@
   }
 }
 
+.form__wrapper {
+  @media (min-width: $desktop) {
+    display: flex;
+  }
+
+  .form-control__label {
+    margin-right: 11px;
+
+    @media (min-width: $tablet) {
+      margin-right: 17px;
+    }
+
+    @media (min-width: $desktop) {
+      margin-right: 21px;
+    }
+  }
+}
+
 .form__wrap {
   @media (min-width: $tablet) {
     padding: 30px 30px 30px 28px;
@@ -268,9 +322,12 @@
 }
 
 .form__box-btn {
+  margin-bottom: 32px;
+
   @media (min-width: $tablet) {
     display: grid;
     grid-template-columns: 282px auto;
+    gap: 61px;
     margin-bottom: 72px;
   }
 
@@ -288,6 +345,6 @@
     max-width: 1280px;
     padding-left: 30px;
     padding-right: 30px;
-    margin: 0 auto 69px;
+    margin: 0 auto 65px;
   }
 }
