--- a/source/sass/blocks/_slider.scss
+++ b/source/sass/blocks/_slider.scss
@@ -53,7 +53,7 @@
     }
 
     @media (min-width: $desktop) {
-      left: -80px;
+      left: -86px;
 
       width: 64%;
 
@@ -150,6 +150,8 @@
   }
 
   @media (min-width: $desktop) {
+    z-index: 1;
+
     &--before {
       margin-right: 27px;
     }
