--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -14,6 +14,7 @@ $black024: rgba(0, 0, 0, 0.24);
 $black016: rgba(0, 0, 0, 0.16);
 $black04: rgba(0, 0, 0, 0.4);
 $black019: rgba(0, 0, 0, 0.19);
+$black02: rgba(0, 0, 0, 0.2);
 $lightgrey: #cdcdcd;
 $lightgrey-strong: #bababa;
 $special-lightgrey: #d9d9d9;
@@ -33,6 +34,7 @@ $text-dark024: $black024;
 $text-dark016: $black016;
 $text-dark04: $black04;
 $text-dark019: $black019;
+$text-dark02: $black02;
 $main: $basic-green;
 $main-special: $special-green;
 $light-back: $special-lightgrey;
