--- a/source/sass/blocks/_radio-button.scss
+++ b/source/sass/blocks/_radio-button.scss
@@ -31,6 +31,10 @@
   border-color: $border-strong;
 }
 
+.radio-button__input:focus + .radio-button__label::before {
+  border-color: $main;
+}
+
 .radio-button__input:disabled + .radio-button__label {
   opacity: 0.3;
 }
