--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -2,30 +2,22 @@
   position: relative;
   padding: 27px 0 35px;
 
-  background-color: $dark-back;
+  //background-color: $dark-back;
 
   @media (min-width: $tablet) {
     padding-top: 0;
     padding-bottom: 67px;
     background: linear-gradient(to top, $dark-back, $dark-back 462px, transparent, transparent 462px);
+    border-top: 1px solid $special-border;
   }
 
   @media (min-width: $desktop) {
     padding-bottom: 70px;
 
-    background: linear-gradient(to top, $back, $back 465px, $transparent, $transparent 465px);
-
-    &::before {
-      position: absolute;
-      right: 0;
-
-      width: calc(50vw - 328px);
-      height: 100%;
-
-      background: linear-gradient(to top, $dark-back, $dark-back 465px, transparent, transparent 465px);
-
-      content: " ";
-    }
+    background:
+      linear-gradient(to bottom, $white 195px, $transparent 195px),
+      linear-gradient(to right, $back, $back calc(50% + 324px), $dark-back calc(50% + 324px));
+    border-top: none;
   }
 }
 
@@ -194,7 +186,6 @@
 
   &--cost {
     padding-right: 5px;
-    //padding-left: 15px;
 
     color: $text-dark;
   }
@@ -276,11 +267,5 @@
   @media (min-width: $tablet) {
     font-size: 20px;
     text-align: end;
-  }
-}
-
-.example__slider {
-  @media (min-width: $desktop) {
-    align-self: flex-end;
   }
 }
