--- a/source/sass/blocks/_example.scss
+++ b/source/sass/blocks/_example.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 27px 0 35px;
 
-  //background-color: $dark-back;
+  background-color: $dark-back;
 
   @media (min-width: $tablet) {
     padding-top: 0;
