--- a/source/sass/_container.scss
+++ b/source/sass/_container.scss
@@ -13,12 +13,20 @@
       padding-left: 70px;
       padding-right: 67px;
     }
+
+    &--example {
+      padding-right: 10px;
+    }
   }
 
   @media (min-width: $desktop) {
     max-width: 1280px;
     padding-left: 30px;
     padding-right: 30px;
+
+    &--example {
+      padding-right: 15px;
+    }
   }
 
 
