--- a/source/sass/blocks/_slider.scss
+++ b/source/sass/blocks/_slider.scss
@@ -124,7 +124,6 @@
 
   @media (min-width: $desktop) {
     justify-content: flex-end;
-    //width: 555px;
   }
 }
 
@@ -154,6 +153,7 @@
   }
 
   &:focus {
+    outline: none;
     box-shadow: 0 0 0 1px $text-dark024;
   }
 
@@ -170,7 +170,7 @@
 
     &:active {
       opacity: 1;
-      border-bottom: none;
+      border-bottom: 1px solid $transparent;
     }
   }
 
