--- a/source/sass/blocks/_features.scss
+++ b/source/sass/blocks/_features.scss
@@ -107,6 +107,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-self: flex-start;
     gap: 0;
     margin: 0;
     padding: 0 0 44px;
