--- a/source/sass/blocks/_offer.scss
+++ b/source/sass/blocks/_offer.scss
@@ -163,6 +163,7 @@
 
   display: inline-flex;
   align-items: center;
+  max-width: 185px;
 
   font-size: 16px;
   line-height: 16px;
@@ -175,7 +176,7 @@
 
     position: absolute;
     top: 5px;
-    left: 118px;
+    left: calc(100% + 32px);
 
     width: 0;
     height: 0;
@@ -190,7 +191,7 @@
 
     position: absolute;
     top: 8px;
-    left: 101px;
+    left: calc(100% + 15px);
 
     width: 18px;
     height: 2px;
@@ -213,17 +214,23 @@
   }
 
   @media (min-width: $tablet) {
+    max-width: 300px;
+
     font-size: 20px;
     line-height: 30px;
 
     &::after {
       top: 10px;
-      left: 147px;
+      left: calc(100% + 61px);
     }
 
     &::before {
       top: 13px;
-      left: 132px;
+      left: calc(100% + 46px);
     }
+  }
+
+  @media (min-width: $desktop) {
+    max-width: 388px;
   }
 }
